[workspace]
members = [
    "crates/rustforge-tensor",
    "crates/rustforge-autograd",
    "crates/rustforge-nn",
    "crates/rustforge-rl",
    "crates/rustforge-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RustForge Contributors"]
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Numerical computation
ndarray = { version = "0.16", features = ["serde"] }
ndarray-rand = "0.15"
rand = "0.8"
rand_distr = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

# Log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Test
approx = "0.5"
proptest = "1"
dhat = "0.3"

# Performance
smallvec = "1.13"
