[package]
name = "rustforge-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.102"
rustforge-autograd = { path = "../rustforge-autograd" }
rustforge-tensor = { path = "../rustforge-tensor" }
