[package]
name = "rustforge-tensor"
description = "High-performance tensor computation engine for RustForge RL"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
